--- a/style.css
+++ b/style.css
@@ -9,47 +9,49 @@ a{text-decoration: none;}
 hr{border:none; border-bottom: 1px solid #ddd}
 
 body{
-    background-color: blue;
+   
 }
 
+.container{
+    height: 100vh;
+    display: flex;
+    color: white
+}
 
-
-
-/* ! HEADER */
-.content{
-    width: 100%;
+.header{
+    width: 80vw;
     height: 100px;
     background-color: red;
     position: fixed;
+   
+    
 }
-
-/* ! ASIDE */
 
 .sidebar{
-    display: flex;
-    width: 20%;
+    width: 20vw;
     height: 100vh;
     background-color: black;
-    color: white;
-    position: absolute;
-    z-index: 10;
+    
+    
 }
 
-/* ! MAIN */
-    main{
-        
-        border-color: blue;
-    }
+main{
+    background-color: blue;
+    width: 80vw;
+    height: 100vh;
+    
+}
 
-/* ! FOOTER */
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: orange;
+    position: fixed;
+    bottom: 0px;
+}
 
-    footer{
-        background-color: orange;
-        width: 100%;
-        height: 100px;
-        position: fixed;
-        margin-top: 0px;
-        bottom: 0px;
-        z-index: 10;
-    }
+
+
+
+
 
