--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 }
 
 .header{
-    width: 80vw;
+    width: 90vw;
     height: 100px;
     background-color: red;
     position: fixed;
@@ -28,17 +28,16 @@ body{
 }
 
 .sidebar{
-    width: 20vw;
+    width: 200px;
     height: 100vh;
     background-color: black;
-    
-    
 }
 
 main{
     background-color: blue;
-    width: 80vw;
-    height: 100vh;
+    width: 90vw;
+    height: calc(100vh - 200px);
+    margin-top: 100px;
     
 }
 
