--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@ img{width: 100%;}
 a{text-decoration: none;}
 hr{border:none; border-bottom: 1px solid #ddd}
 
-body{
-   
+
+
+/* ! HELPERS */
+
+.p-10{
+    padding-top: 10px;
 }
 
 .container{
@@ -18,19 +22,33 @@ body{
     color: white
 }
 
+/* HEADER */
+
 .header{
     width: 90vw;
     height: 100px;
     background-color: red;
     position: fixed;
-   
-    
+}
+
+/* SIDEBAR */
+
+#logo img{
+    width: 80%;
+    margin: 20px;
+}
+
+.menu-side li, h2 {
+    padding: 5px 10px;
 }
 
 .sidebar{
     width: 200px;
     height: 100vh;
     background-color: black;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
 }
 
 main{
