--- a/style.css
+++ b/style.css
@@ -1,99 +1,63 @@
-/* CSS RESET */
+/* RESET */
 
-body, html{ font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif; box-sizing: border-box;margin: 0;padding: 0;}
+body, html{ font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;font-family: 'Merriweather Sans', sans-serif; box-sizing: border-box;margin: 0;padding: 0;}
 *,*:before,*:after{ box-sizing: border-box; }
-h1,h2,h3,h4,h5,h6, p, ol, ul{margin: 0;padding: 0;}
 ol,ul{list-style-type: none;}
-img{width: 100%;}
+
 a{text-decoration: none;}
-hr{border:none; border-bottom: 1px solid #ddd}
+hr{width: 100%; margin-left: 0px;}
 
+/* HELPERS */
 
-
-/* ! HELPERS */
-
-.p-10{
-    padding-top: 10px;
-}
-
-.container{
-    height: 100vh;
+.flex.container{
     display: flex;
-    color: white
-}
-
-/* HEADER */
-
-.header{
-    width: 90%;
-    height: 100px;
-    background-color: #080B12;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    height: 90vh;
+    width: 100%;
     }
 
-    .header a {
-        color: gray;
-        margin-right: 75px;
-        border: 1px solid gray;
-        padding: 15px;
-        border-radius: 20px;
-        }
-
-    .header a:hover{
-        color: white;
-        border: 1px solid white;
-    }
-
-/* SIDEBAR */
-
-#logo img{
-    width: 80%;
-    margin: 20px;
-}
-
-.menu-side li, h2 {
-    padding: 5px 10px;
-}
-
-.sidebar{
-    width: 200px;
-    height: 100vh;
-    background-color: black;
+#app-container{
     display: flex;
     flex-direction: column;
-    color: gray;
+    flex-grow: 1;
+    background-color: blue;
+}
+
+#sidebar{
+    
+    width: 220px;
+    background-color: yellow;
+    display: flex;
+    flex-direction: column;
     }
 
-.sidebar a {
-    color: gray;
-}
-
-.sidebar a:hover{
-    color: white;
-    
-}
-
-main{
-    background-color: blue;
-    width: 90vw;
-    height: calc(100vh - 200px);
-    margin-top: 100px;
-    
-}
-
-footer{
+.header{
+    height: 10vh;
     width: 100%;
-    height: 100px;
-    background-color: orange;
-    position: fixed;
-    bottom: 0px;
-}
+    background-color: red;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+    }
+
+ .header a{
+    color: white;
+    margin-right: 20px;
+ }
 
 
 
+.main{
+    height: 80vh;
+    width: 100%;
+    background-color: blue;
+     }
 
+.footer{
+    height: 10vh;
+    width: 100%;
+    background-color: green;
+    
+    }
 
-
+   
