--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ hr{width: 100%; margin-left: 0px;}
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    background-color: blue;
+    
 }
 
 #sidebar{
@@ -43,7 +43,7 @@ hr{width: 100%; margin-left: 0px;}
 }
 
 #sidebar #logo img{
-    width: 70%;
+    max-width: 150px;
 }
 
 /* ! MENU-SIDE */
@@ -140,13 +140,13 @@ hr{width: 100%; margin-left: 0px;}
     height: 80vh;
     width: 100%;
     background-color: #141922;
-    border: 1px solid red;
+    
     }
 
 #main-header{
     width: 100%;
     height: 80px;
-    border: 1px solid red;
+   
     display: flex;
     color: #797C80;
     justify-content: center;
@@ -171,7 +171,7 @@ hr{width: 100%; margin-left: 0px;}
     color: white;
     height: 87%;
     padding: 10px;
-    border: 1px solid blue;
+   
 }
 
 #album-container{
