--- a/style.css
+++ b/style.css
@@ -53,13 +53,17 @@ hr{width: 100%; margin-left: 0px;}
     color: #717171;
 }
 
-#menu-side li{
+#menu-side a{
     margin-top: 5px;
     color: #717171;
 }
 
 #menu-side ul{
     margin-left: -25px;
+}
+
+#menu-side li{
+    padding: 4px 0px;
 }
 
 #menu-side h3 {
@@ -71,7 +75,7 @@ hr{width: 100%; margin-left: 0px;}
     padding: 5px;
 }
 
-#menu-side li:hover{
+#menu-side a:hover{
     color: white;
 }
 
@@ -146,8 +150,6 @@ hr{width: 100%; margin-left: 0px;}
 
 #main-header{
     width: 100%;
-    height: 50px;
-   
     display: flex;
     color: #797C80;
     justify-content: center;
@@ -176,12 +178,11 @@ hr{width: 100%; margin-left: 0px;}
 }
 
 #album-container{
-    border: 1px solid red;
+    
     height: 100%;
     overflow: scroll;
     display: flex;
     flex-direction: column;
-    
 }
 
 .row{
@@ -194,7 +195,7 @@ hr{width: 100%; margin-left: 0px;}
 }
 
 .album-box{
-    border: 1px solid red;
+    
     width: calc(100% / 6 - 20px);
     margin: 10px;
     display: block;
@@ -285,8 +286,8 @@ hr{width: 100%; margin-left: 0px;}
     }
 
     #main-header ul{
-        width: 90%;
         text-align: center;
+        line-height: 1.7em;
     }
 
 }   
@@ -314,9 +315,22 @@ hr{width: 100%; margin-left: 0px;}
         display: initial;
       }
 
-    #sidebar #logo img, #menu-side img {
-        max-width: 40px;
+    #sidebar #logo img, #menu-side img  {
+        width: 40px;
         margin-top: 10px;
+    }
+
+    #menu-footer img{
+        width: 30px;
+        margin: 5px 10px;
+    }
+
+    #menu-block2, #menu-side span, #menu-footer span, hr{
+        display: none;
+    }
+
+    #menu-side ul {
+        margin-left: -28px;
     }
 
     
