--- a/style.css
+++ b/style.css
@@ -180,9 +180,19 @@ hr{width: 100%; margin-left: 0px;}
 #album-container{
     
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
+}
+
+#album-container .row .album-box:nth-child(3) img{
+    position: relative;
+    opacity: 30%;
+}
+
+#album-container .row .album-box:nth-child(3) .icon {
+    position: absolute;
+    
 }
 
 .row{
@@ -249,20 +259,60 @@ hr{width: 100%; margin-left: 0px;}
 .icons{
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .icons i{
-    margin: 15px;
+    margin: 10px;
 }
 
 #player{
     color: white;
     display: flex;
     flex-direction: column;
+    width: 40%;
+    align-items: center;
 }
 
-#player .icons i{
-    margin: 10px 30px;
+
+#player .icons-player i{
+    margin: 10px 15px;
+}
+
+.progress-bar{
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+    padding: 0px 10px;
+    border: 1px solid red;
+    }
+
+.progress-bar p{
+    padding: 0px 10px;
+}
+
+.bar{
+    background-color: grey;
+    width: 100%;
+    height: 2px;
+    border-radius: 10px;
+}
+
+#volume{
+   display: flex; 
+   align-items: center;
+   padding: 0px 5px;
+}
+
+#volume i{
+    padding: 5px;
+}
+
+.bar-volume{
+    background-color: white;
+    width: 10%;
+    height: 10px;
+    border-radius: 10px;
 }
 
 
@@ -332,6 +382,10 @@ hr{width: 100%; margin-left: 0px;}
     #menu-side ul {
         margin-left: -28px;
     }
+
+    .icons i {
+        margin: 6px;
+}
 
     
 } 
