--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ hr{width: 100%; margin-left: 0px;}
  .header a:hover{
     color: white;
     border: 1px solid white;
+    font-size: 14px;
 
  }
 
@@ -173,7 +174,10 @@ hr{width: 100%; margin-left: 0px;}
     color: white;
     height: 87%;
     padding: 10px;
-   
+   }
+
+#main-container a{
+    color: white;
 }
 
 #album-container{
@@ -266,6 +270,11 @@ hr{width: 100%; margin-left: 0px;}
     width: 30%;
 }
 
+#title{
+    color: White;
+    margin-left: -16px;
+}
+
 .icons{
     display: flex;
     flex-direction: row;
@@ -290,7 +299,7 @@ i:hover{
 
 
 #player .icons-player i{
-    margin: 10px 15px;
+    margin: 10px 10px;
 }
 
 .progress-bar{
@@ -318,7 +327,18 @@ i:hover{
     height: 2px;
     position: absolute;
     left: 50px;
-    
+}
+
+.bar--green{
+    background-color: white;
+    width: 10%;
+    height: 2px;
+    position: absolute;
+    left: 50px;  
+}
+
+.bar--green:hover{
+    background-color: greenyellow;
 }
 
 #volume{
