--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* RESET */
 
-body, html{ font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;font-family: 'Merriweather Sans', sans-serif; box-sizing: border-box;margin: 0;padding: 0;}
+body, html{ font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;font-family: 'Montserrat', sans-serif; box-sizing: border-box;margin: 0;padding: 0;}
 *,*:before,*:after{ box-sizing: border-box; }
 ol,ul{list-style-type: none;}
 
@@ -167,8 +167,19 @@ hr{width: 100%; margin-left: 0px;}
 }
 
 .white{
-    color: white;
+    color: white !important;
+    position: relative;
 }
+
+.white::before{
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 30%;
+    border-bottom: 2px solid yellowgreen;
+    width: 30%;
+ }
+
 
 #main-header a:hover{
     color: white;
@@ -179,10 +190,6 @@ hr{width: 100%; margin-left: 0px;}
     height: 87%;
     padding: 10px;
    }
-
-#main-container a{
-    color: white;
-}
 
 #album-container{
     height: 100%;
