--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ hr{width: 100%; margin-left: 0px;}
     color: #797C80;
     justify-content: center;
     flex-wrap: wrap;
+    font-size: 14px;
 }
 
 #main-header li{
@@ -244,6 +245,9 @@ hr{width: 100%; margin-left: 0px;}
 .album-box img{
     width: 100%;
     display: block;
+}
+.album-box a{
+    color: white;
 }
 
 /************ FINE MAIN ****************/
